--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -9,7 +9,7 @@ body {
 
 #unity-container.unity-desktop {
     width: 100%;
-    height: 100%
+    height: 90vh
 }
 
 #unity-container.unity-mobile {
