--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -56,7 +56,7 @@ body {
 
 #unity-footer {
     width: 100%;
-    height: 5vh
+    height: 7vh
 }
 
 .unity-mobile #unity-footer {
@@ -85,6 +85,7 @@ body {
     background: url('fullscreen-button.png') no-repeat center
 }
 
+
 #unity-mobile-warning {
     position: absolute;
     left: 50%;
@@ -93,4 +94,11 @@ body {
     background: white;
     padding: 10px;
     display: none
+}
+
+#Historia {
+    background-image: url('scr1.png')
+}
+#Controls {
+    background-image: url('scr6.png')
 }
